-Fixed small CSS issue where the background image was being cut off on certain sizes.

--- a/styles/home.css
+++ b/styles/home.css
@@ -16,7 +16,7 @@ body {
     background: linear-gradient( rgba(30, 31, 51, 0.75), rgba(30, 31, 51, 1)), url("../media/league-of-legends-background.jpg") no-repeat center;
     /*Flat background colour so gradient/image merges into a solid colour */
     background-color: #1e1f33;
-    background-size: auto 100%;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
 }
@@ -75,7 +75,6 @@ input, select, button {
 
 #summonerContainer {
     width: 100%;
-    height: calc(100% - 50px);
     box-sizing: border-box;
     padding: 10px;
     opacity: .8;
